# falco-ui

./: .gitignore  README.md  justfile  pyproject.toml
demo/demo/: settings.py  urls.py
demo/templates/: base.html  index.html
src/falco_ui/: apps.py  urls.py  views.py
src/falco_ui/bootstrap/: apps.py
src/falco_ui/favicons/: apps.py
src/falco_ui/tailwind/: apps.py
src/falco_ui/templatetags/: falco_ui.py
